@@ -94,3 +94,4 @@
       - Added: possibility to prepare carrier labels
       - Added: There is new possibility to post parcel via button in our packetery box in BO order detail
       - Updated: Widget HD library URL
+      - Added: possibility to delete PDF labels via CRON and customize deletion results with GET params (file age/number of deleted files at once)
